ver 1.01 modified amed site from amed.md to amdm.gov.md
Signed-off-by: AlexLX2 <kolosoff.alex@gmail.com>